--- a/.travis.yml
+++ b/.travis.yml
@@ -3,3 +3,5 @@ language: swift
 script:
   - xcodebuild -project LearnVapor.xcodeproj -scheme Run -sdk macosx ONLY_ACTIVE_ARCH=NO 
   - xcodebuild test -project LearnVapor.xcodeproj -scheme Run -sdk macosx ONLY_ACTIVE_ARCH=NO
+after_success:
+  - bash <(curl -s https://codecov.io/bash)
